--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Instant Tab Screenshot",
-  "version": "1.3.8",
+  "version": "1.3.12",
   "description": "Capture visible, selected area, full-page, or extended screenshots with one click or keyboard shortcut.",
-  "permissions": ["activeTab", "tabs", "downloads", "scripting", "clipboardWrite", "storage"],
+  "permissions": ["activeTab", "downloads", "scripting", "clipboardWrite"],
   "background": {
     "service_worker": "src/background.js",
     "type": "module"
